tests/spec/compile-pass/072_task_context_cancel_check.zn
// category: compile-pass
// profile: hosted
// purpose: spawnWithContext can provide TaskContext for explicit cancellation checks

module tests.pass.taskContextCancelCheck;

async fn processCancellable(move work: Work, ctx: TaskContext) -> Result<Unit, WorkError> {
    if ctx.isCancellationRequested() {
        return Err(WorkError.Cancelled);
    }

    return process(move work);
}

async fn runCancellable(move runtime: Runtime, move work: Work) -> Result<Unit, WorkError> {
    val task = try runtime.spawnWithContext(
        move (ctx: TaskContext) => processCancellable(move work, ctx)
    );

    return try await task;
}
